# VeritasAI

./: .gitignore  README.md  package.json  pyproject.toml  requirements.txt  run.py  start.sh  test_api.py  vercel.json
api/: index.py
backend/services/: groq_ai.py
database/: veritasai.db
frontend/: package-lock.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/pages/: ChatPage.jsx  Home.jsx
frontend/src/services/: api.js
mindmirror-ai/: .gitattributes  package.json  requirements.txt  run_backend.bat  start.bat  start_all.bat
mindmirror-ai/backend/: app.py
mindmirror-ai/backend/database/: db.py
mindmirror-ai/database/: mindmirror.db
mindmirror-ai/frontend/: index.html  package.json
mindmirror-ai/frontend/src/: index.css
mindmirror-ai/frontend/src/pages/: Insights.jsx
mindmirror-ai/frontend/src/services/: api.js
